--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
+  gradient_borders: ^1.0.0
   flutter_svg: ^2.0.2
-  glassmorphism: ^3.0.0
-  flutter_rating_bar: ^4.0.1
+  device_preview: ^1.1.0
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -64,10 +65,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/movie promos/
-     - assets/icons/
-     - assets/casts/
-     - assets/masks/
+    - assets/
+    - assets/svg/
+    - assets/mask/
+    - assets/cast/
+    - assets/posters/
+    
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
